--- a/sass/base/_menu.scss
+++ b/sass/base/_menu.scss
@@ -3,7 +3,7 @@
 .menu-button {
   position: absolute;
   top: 10px;
-  right: 0;
+  right: 15px;
   display: inline-flex;
   padding: 0;
   border: none;
@@ -14,7 +14,7 @@
 
   z-index: 5;
 
-  transition: color 250ms var(--timing-function);
+  transition: fill 250ms var(--timing-function);
 
   @media screen and (min-width: 768px) {
     display: none;
@@ -39,19 +39,27 @@
 }
 
 .menu-container {
+  display: flex;
+  align-items: center;
+
   @media screen and (max-width: 767px) {
     display: none;
     position: absolute;
     top: 0;
     left: -15px;
     width: 480px;
-    height: 796px;
+    height: 100vh;
     padding: 48px 40px;
+    align-items: start;
     text-align: center;
     font-size: 20px;
     z-index: 3;
 
     background-color: var(--primary-white-color);
+
+    @media screen and (max-width: 479px) {
+      width: 480px;
+    }
 
     &.is-open {
       display: flex;
@@ -59,15 +67,6 @@
       justify-content: space-between;
     }
   }
-
-  @media screen and (min-width: 768px) {
-    display: flex;
-    align-items: center;
-  }
-}
-
-.navigation {
-  text-align: center;
 }
 
 .menu-socials__item {
