--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,4 +1,5 @@
 /*  contacts  */
+
 .navigation__contacts {
   @media screen and (min-width: 768px) {
     margin-left: 72px;
@@ -10,15 +11,13 @@
 }
 
 .contacts {
-  @media screen and (max-width: 767px) {
-    margin-left: 0;
-    margin-bottom: 64px;
-  }
+  margin-left: 0;
+  margin-bottom: 64px;
 
   @media screen and (min-width: 768px) {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    margin-bottom: 0;
   }
 
   @media screen and (min-width: 1200px) {
