--- a/sass/components/modal-form/_modal.scss
+++ b/sass/components/modal-form/_modal.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100%;
-  padding: 0 15px;
+  padding: 93px 15px 15px;
   overflow-y: scroll;
 
   opacity: 1;
@@ -22,27 +22,23 @@
 
 .modal {
   position: relative;
+  width: 99%;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 4px;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 
   background-color: var(--primary-white-color);
 
-  transform: translatex(-50%);
-  transition: transform 250ms var(--timing-function);
-
-  @media screen and (min-width: 320px) {
-    left: 50%;
-    width: 99%;
-    top: 93px;
-  }
-
   @media screen and (min-width: 480px) {
     position: absolute;
-    top: 93px;
     left: 50%;
     width: 100%;
     max-width: 450px;
+
+    transform: translatex(-50%);
+    transition: transform 250ms var(--timing-function);
   }
 
   @media screen and (min-width: 768px) {
@@ -50,14 +46,13 @@
   }
 
   @media screen and (min-width: 1200px) {
-    left: 50%;
     top: 221px;
-    width: 100%;
     max-width: 528px;
   }
 }
 
 /* modal-btn */
+
 .modal-btn__icon {
   position: absolute;
   top: 8px;
