--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,6 +5,7 @@
   padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
+  min-width: 320px;
 
   @media screen and (min-width: 480px) {
     width: 480px;
