--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -2,11 +2,11 @@
 
 .navigation__contacts {
   @media screen and (min-width: 768px) {
-    margin-left: 72px;
+    margin-left: 90px;
   }
 
   @media screen and (min-width: 1200px) {
-    margin-left: 326px;
+    margin-left: 315px;
   }
 }
 
@@ -29,16 +29,6 @@
       fill: currentColor;
       margin-right: 10px;
     }
-  }
-}
-
-.nav__contacts {
-  @media screen and (min-width: 768px) {
-    margin-left: 90px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    margin-left: 315px;
   }
 }
 
@@ -109,6 +99,10 @@
       font-size: 34px;
       font-weight: 500;
       letter-spacing: 0.68px;
+
+      @media screen and (max-width: 400px) {
+        font-size: 27px;
+      }
     }
   }
 
