зміна розміру logo

--- a/css/main.css
+++ b/css/main.css
@@ -695,6 +695,12 @@ p {
   text-decoration: none;
   color: var(--accent-color);
 }
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    letter-spacing: 0.78px;
+  }
+}
 
 /* logo footer */
 .logo__footer {
