--- a/sass/base/_menu.scss
+++ b/sass/base/_menu.scss
@@ -55,6 +55,10 @@
   list-style: none;
   align-items: center;
 
+  @media screen and (max-width: 479px) {
+    width: 480px;
+  }
+
   @media screen and (max-width: 767px) {
     display: none;
     position: absolute;
@@ -69,16 +73,24 @@
     z-index: 3;
 
     background-color: var(--primary-white-color);
+  }
 
-    @media screen and (max-width: 479px) {
-      width: 480px;
-    }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    width: calc(100% - 134px);
+    margin-left: 88px;
+  }
 
-    &.is-open {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
+  @media screen and (min-width: 1200px) {
+    width: calc(100% - 145px);
+    margin-left: 93px;
+  }
+
+  &.is-open {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
 
